Added logo at footer and font style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Graduated from the DTC program in Washington State University Vancouver, I'm inspired to become a Web Developer. Since 2018, I've been learning and building websites and programs using a variety of languages and softwares to develop functional and responsive websites.">
+    <link rel="canonical" href="https://richardmora.net">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
     <link rel="shortcut icon" href="./assets/image/Icon dark v2_favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
     <title>Richard Mora</title>
@@ -71,96 +79,111 @@
                     <a href="https://www.aheadcomputing.com/"><img src="./assets/projects/aheadcomputing.png"
                             alt="AheadComputing's website"></a>
                 </figure>
-                <h3>AheadComputing</h3>
-                <p>Website Designer, Winter 2024</p>
-                <ul>
-                    <li>Use the Wix Studio platform to edit and update website.</li>
-                    <li>Fix the styling and spacing issues and overall layout for a consistent look.</li>
-                    <li>Redesign the navigation bar and mobile site and other web pages to be more responsive.</li>
-                </ul>
+                <div class="project">
+                    <h3>AheadComputing</h3>
+                    <p>Website Designer, Winter 2024</p>
+                    <ul>
+                        <li>Use the Wix Studio platform to edit and update website.</li>
+                        <li>Fix the styling and spacing issues and overall layout for a consistent look.</li>
+                        <li>Redesign the navigation bar and mobile site and other web pages to be more responsive.</li>
+                    </ul>
+                </div>
             </section>
             <section>
                 <figure>
                     <a href="https://dtc-wsuv.org/projects/data-entry-portal/"><img
                             src="./assets/projects/dataentryportal.png" alt="Data Entry: Portal's website"></a>
                 </figure>
-                <h3>DATA ENTRY: PORTAL</h3>
-                <p>Web/Game Developer & UX/UI Designer, Spring 2023</p>
-                <ul>
-                    <li>The creation of a VR game based on the 1986 game Portal by Rob Swigart and published by
-                        Activision along with a website showcasing it.</li>
-                    <li>Coded using HTML5, CSS3, and JavaScript for website.</li>
-                    <li>Created mobile wireframe and prototype for website.</li>
-                    <li>Built hamburger menu for mobile navigation using HTML5, CSS3, JavaScript, and SVG. </li>
-                </ul>
+                <div class="project">
+                    <h3>DATA ENTRY: PORTAL</h3>
+                    <p>Web/Game Developer & UX/UI Designer, Spring 2023</p>
+                    <ul>
+                        <li>The creation of a VR game based on the 1986 game Portal by Rob Swigart and published by
+                            Activision along with a website showcasing it.</li>
+                        <li>Coded using HTML5, CSS3, and JavaScript for website.</li>
+                        <li>Created mobile wireframe and prototype for website.</li>
+                        <li>Built hamburger menu for mobile navigation using HTML5, CSS3, JavaScript, and SVG. </li>
+                    </ul>
+                </div>
             </section>
             <section>
                 <figure>
                     <a href="https://dtc-wsuv.org/rmora21/narrative/"><img src="./assets/projects/Gathering.png"
                             alt="Gathering of Lost Souls' website"></a>
                 </figure>
-                <h3>Gathering of Lost Souls</h3>
-                <p>Wev Developer, Fall 2021</p>
-                <ul>
-                    <li>The Gathering of Lost Souls is an interactive scroll narrative on a single page website.
-                    </li>
-                    <li>Coded a scroll-animated website with HTML5, CSS3 and the Skrollr plugin.</li>
-                    <li>Used JavaScript to advance story with added visuals, and sounds.
-                    </li>
-                </ul>
+                <div class="project">
+                    <h3>Gathering of Lost Souls</h3>
+                    <p>Wev Developer, Fall 2021</p>
+                    <ul>
+                        <li>The Gathering of Lost Souls is an interactive scroll narrative on a single page website.
+                        </li>
+                        <li>Coded a scroll-animated website with HTML5, CSS3 and the Skrollr plugin.</li>
+                        <li>Used JavaScript to advance story with added visuals, and sounds.
+                        </li>
+                    </ul>
+                </div>
             </section>
             <section>
                 <figure>
                     <a href="http://dtc-wsuv.org/rmora21/recipe/"><img src="./assets/projects/meatballs.png"
                             alt="Sweet and Spicy Turkey Meatballs' website"></a>
                 </figure>
-                <h3>Sweet and Spicy Turkey Meatballs</h3>
-                <p>Web Developer, Fall 2021</p>
-                <ul>
-                    <li>A responsive recipe website.</li>
-                    <li>Coded with HTML5 and CSS3 for the design of the website.</li>
-                    <li>Utilized schema to improve website's searchability.</li>
-                    <li>Used media-queries and CSS-grid for responsive design.</li>
-                </ul>
+                <div class="project">
+                    <h3>Sweet and Spicy Turkey Meatballs</h3>
+                    <p>Web Developer, Fall 2021</p>
+                    <ul>
+                        <li>A responsive recipe website.</li>
+                        <li>Coded with HTML5 and CSS3 for the design of the website.</li>
+                        <li>Utilized schema to improve website's searchability.</li>
+                        <li>Used media-queries and CSS-grid for responsive design.</li>
+                    </ul>
+                </div>
             </section>
             <section>
                 <figure>
                     <a href="http://wsuvtech4students.org/"><img src="./assets/projects/studenthelpingstudents.png"
                             alt="Students Helping Students' website"></a>
                 </figure>
-                <h3>Students Helping Students</h3>
-                <ul>
-                    <li>A WordPress website for a student-led program in cooperation with WSU Vancouver IT.</li>
-                    <li>Managed website which involves updating and uploading content using HTML5 and CSS3.</li>
-                    <li>Improve usability, readability, and navigation of website.</li>
-                </ul>
+                <div class="project">
+                    <h3>Students Helping Students</h3>
+                    <p>Web Developer, FAll 2021</p>
+                    <ul>
+                        <li>A WordPress website for a student-led program in cooperation with WSU Vancouver IT.</li>
+                        <li>Managed website which involves updating and uploading content using HTML5 and CSS3.</li>
+                        <li>Improve usability, readability, and navigation of website.</li>
+                    </ul>
+                </div>
             </section>
             <section>
                 <figure>
                     <a href="https://dtc-wsuv.org/rmora21/dtc477/gameproject/"><img
                             src="./assets/projects/arrangedice.png" alt="Arrange the Numbers' website"></a>
                 </figure>
-                <h3>Arrange the Numbers</h3>
-                <p>Web Developer, Spring 2022</p>
-                <ul>
-                    <li>A scripted web game where the user has five chances to guess a number.</li>
-                    <li>Coded with HTML5 and CSS3 for minimalistic design feasturing music.</li>
-                    <li>Used JavaScript to generate random numbers and keep track of gameplay.</li>
-                </ul>
+                <div class="project">
+                    <h3>Arrange the Numbers</h3>
+                    <p>Web Developer, Spring 2022</p>
+                    <ul>
+                        <li>A scripted web game where the user has five chances to guess a number.</li>
+                        <li>Coded with HTML5 and CSS3 for minimalistic design feasturing music.</li>
+                        <li>Used JavaScript to generate random numbers and keep track of gameplay.</li>
+                    </ul>
+                </div>
             </section>
             <section>
                 <figure>
                     <a href="https://dtc-wsuv.org/rmora21/dtc477/map/"><img src="./assets/projects/restaurantmapbox.png"
                             alt="Favorite Local Ramen Restaurants' website"></a>
                 </figure>
-                <h3>Favorite Local Ramen Restaurants</h3>
-                <p>Web Developer, Spring 2022</p>
-                <ul>
-                    <li>A website featuring an interactive map to display personal favorite restaurants.</li>
-                    <li>Used Mapbox API to create an interactive map featuring customized locations.</li>
-                    <li>Coded using JavaScript to move, zoon in or zoom out to customize points on the map.</li>
-                    <li>Designed using HTML5 and CSS3 for the content and links to external websites.</li>
-                </ul>
+                <div class="project">
+                    <h3>Favorite Local Ramen Restaurants</h3>
+                    <p>Web Developer, Spring 2022</p>
+                    <ul>
+                        <li>A website featuring an interactive map to display personal favorite restaurants.</li>
+                        <li>Used Mapbox API to create an interactive map featuring customized locations.</li>
+                        <li>Coded using JavaScript to move, zoon in or zoom out to customize points on the map.</li>
+                        <li>Designed using HTML5 and CSS3 for the content and links to external websites.</li>
+                    </ul>
+                </div>
             </section>
         </section>
         <section class="cert">
@@ -195,14 +218,18 @@
             </section>
         </section>
         <section class="contact">
+            <p>Have any questions or want to talk about video games and/or anime? You can reach me through my email or
+                from one of my social media pages below.</p>
             <h2>Contact Me</h2>
             <h3>Email:</h3>
             <a href="mailto:richard.mora0511@gmail.com"><img src="./assets/icon/envelope-at-fill.svg"
                     alt="email with @ icon" width="40px"></a>
+            <h3>Resume:</h3>
             <p><a class="modeChange" href="./docs/Mora-resume-Latest.pdf" target="_blank">CV Resume</a></p>
         </section>
     </main>
     <footer>
+        <img id="logo" src="./assets/image/Icon primary dark.png" alt="Richard Mora's icon">
         <p>Richard Mora &copy; 2025</p>
         <section class="social">
             <ul>
