Finish about section

--- a/index.html
+++ b/index.html
@@ -40,38 +40,44 @@
     <main>
         <section class="about">
             <img src="./assets/image/profile_1.png" alt="close up of Richard Mora">
-            <h2>About Me</h2>
-            <p>Greetings. I'm a self-taught programming who later went
-                back to school to become a professional web developer.
-                Gotten into programming after 13 years working as a cook
-                working in a hotel restaurant.</p>
-            <p>Starting at 2018, I attended classes at my local college for three years learning web development for
-                front-end as well as some back-end web development. Afterwards, I went for another two years attending
-                school at my local university learning new skills and improving my current skills.</p>
-            <p>I would play video games,
-                watch anime, read a decent variety of books including
-                manga, novels, and technical books as well. I also love
-                to go on hikes, listen to K-pop and writing Haikus.</p>
+            <article id="top">
+                <h2>About Me</h2>
+                <p>Greetings. I'm a self-taught programming who later went
+                    back to school to become a professional web developer.
+                    Gotten into programming after 13 years working as a cook
+                    working in a hotel restaurant.</p>
+            </article>
+            <article id="middle">
+                <p>Starting at 2018, I attended classes at my local college for three years learning web development for
+                    front-end as well as some back-end web development. Afterwards, I went for another two years
+                    attending
+                    school at my local university learning new skills and improving my current skills.</p>
+                <p>I would play video games,
+                    watch anime, read a decent variety of books including
+                    manga, novels, and technical books as well. I also love
+                    to go on hikes, listen to K-pop and writing Haikus.</p>
+            </article>
+            <section class="skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li>HTML 5</li>
+                    <li>CSS 3</li>
+                    <li>JavaScript</li>
+                    <li>Bootstrap</li>
+                    <li>PHP</li>
+                    <li>SQL</li>
+                    <li>Responsive web design</li>
+                    <li>WordPress</li>
+                    <li>Wix</li>
+                    <li>Figma</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>jQuery</li>
+                    <li>React</li>
+                </ul>
+            </section>
         </section>
-        <section class="skills">
-            <h2>Skills</h2>
-            <ul>
-                <li>HTML 5</li>
-                <li>CSS 3</li>
-                <li>JavaScript</li>
-                <li>Bootstrap</li>
-                <li>PHP</li>
-                <li>SQL</li>
-                <li>Responsive web design</li>
-                <li>WordPress</li>
-                <li>Wix</li>
-                <li>Figma</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>jQuery</li>
-                <li>React</li>
-            </ul>
-        </section>
+
         <section class="projects">
             <h2>Projects</h2>
             <section>
@@ -222,10 +228,9 @@
                 from one of my social media pages below.</p>
             <h2>Contact Me</h2>
             <h3>Email:</h3>
-            <a href="mailto:richard.mora0511@gmail.com"><img src="./assets/icon/envelope-at-fill.svg"
-                    alt="email with @ icon" width="40px"></a>
+            <p><a href="mailto:richard.mora0511@gmail.com">richard.mora0511@gmail.com</p></a>
             <h3>Resume:</h3>
-            <p><a class="modeChange" href="./docs/Mora-resume-Latest.pdf" target="_blank">CV Resume</a></p>
+            <p><a href="./docs/Mora-resume-Latest.pdf" target="_blank">CV Resume</a></p>
         </section>
     </main>
     <footer>
